--- a/recuperar.html
+++ b/recuperar.html
@@ -65,10 +65,10 @@
   </div>
 
   <script>
-    const supabase = supabase.createClient(
-      "https://TU_URL.supabase.co",
-      "TU_PUBLIC_ANON_KEY"
-    );
+const supabaseClient = supabase.createClient(
+    "https://jwcgiuhdugjunndfpdjr.supabase.co",
+    "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imp3Y2dpdWhkdWdqdW5uZGZwZGpyIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjI5NTA2NTQsImV4cCI6MjA3ODUyNjY1NH0.llknOTpK1hFMDOjdyDUKUFuiyr0NwwJzNv6YdJbBsRY"
+);
 
     async function enviarCorreo() {
       const email = document.getElementById("email").value;
